--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
 
       <div class="github-link">
-        <a href="https://github.com/yourusername">Visit my GitHub profile</a>
+        <a href="https://github.com/Pskantz">Visit my GitHub profile</a>
       </div>
     </section>
 
