--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     </section>
 
     <section class="about" id="about">
-      <h2>About Me</h2>
+      <h2>Om mig</h2>
       <div class="about-content">
         <img src="portfoliobild.jpg" alt="" />
         <div class="about-text">
           <h3>Patrik Skantz</h3>
-          <p>Age: 29</p>
+          <p>Ålder: 29</p>
           <p>
             Studerar Fullstack Open Sourse på Nackademin. Förväntad examen i maj
             2024.
@@ -69,7 +69,7 @@
 
     <section class="skills" id="skills">
       <h2>Skills</h2>
-      <p>Here are some of my skills.</p>
+      <p>Fädigheter och kunskaper.</p>
       <div class="skills-list">
         <div class="skill">
           <i class="bx bxl-react skill-icon"></i>
