Ändrat text från engelska till svenska

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a href="#" class="logo">Portfolio</a>
 
       <nav class="navbar">
-        <a href="#home" style="--i: 1" class="active">Home</a>
-        <a href="#about" style="--i: 2">About</a>
+        <a href="#home" style="--i: 1" class="active">Hem</a>
+        <a href="#about" style="--i: 2">Om mig</a>
         <a href="#skills" style="--i: 3">Skills</a>
         <a href="#portfolio" style="--i: 4">Portfolio</a>
       </nav>
