--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    
+    </div>
     <header class="header">
       <a href="#" class="logo">Portfolio</a>
 
@@ -46,7 +48,7 @@
       </div>
 
       <div class="home-img">
-        <img src="#" width="400px" alt="" />
+        <img src="OIP.jpg" width="" alt="" />
       </div>
     </section>
 
